<resources>
    <string name="app_name">Project DM</string>
    <string name="title_active_login">Login</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="notaccount">Don\'t have an account?</string>
    <string name="email_address">Email Address</string>
    <string name="language">English</string>
    <string name="full_name">Full name</string>
    <string name="Age">Age</string>
    <string name="logout">Logout</string>
    <string name="join">Start VideoCall</string>
    <string name="buttonchatvideo">Video Call</string>
    <string name="pantalla_register">Register User</string>
    <string name="write_message">Type a message</string>
    <string name="send_message">Send</string>
    <string name="other_users">Other Users (Chat/Video)</string>
    <string name="birth_date">Birth Date</string>
    <string name="user_role1">Seller</string>
    <string name="user_role2">Buyer</string>
    <string name="Welcome">Hi, Welcome</string>
    <string name="return_menu">Return to messages</string>
    <string name="secret_code">Enter Secret Code</string>
    <string name="bienvenido">¡Welcome!</string>
    <string name="para_usar">To use our app, log in</string>
    <string name="email">Email</string>
    <string name="minimum">Minimum six characters</string>
    <string name="register_">Register</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="create_your_account">Create your account in less than a minute!</string>
    <string name="shopping">Shopping</string>
    <string name="video_chat">Video chat</string>
    <string name="my_profile">My profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="sorry_we_were_not_able">Sorry, we were not able to find what you were searching for.</string>
    <string name="change_language">Change language</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="type_of_user">Type of user</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="adminlog">If you are an administrator login here ✓ </string>
    <string name="AdminSpace">Administrators Login</string>
    <string name="ContactAdmin">Contact Seller</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_your_telephone_number">Enter your telephone number</string>

</resources>
