<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fotoPerfil"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click para cambiar tu foto de perfil"/>
            <EditText
                android:id="@+id/idRegistroNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"/>
            <EditText
                android:id="@+id/idRegistroCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/idRegistroContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/idRegistroContraseñaRepetida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/txtFechaDeNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date"
                android:inputType="date"
                android:clickable="true"
                android:focusable="false"/>
            <RadioGroup
                android:id="@+id/rgGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdHombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_role1"
                    android:layout_weight="1"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/rdMujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_role2"
                    android:layout_weight="1"/>
            </RadioGroup>
            <Button
                android:id="@+id/idRegistroRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/register"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>