<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/emailAddressTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/email_address"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fullNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp" />
    <TextView
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ageTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="UserType"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnVerUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/other_users"/>
    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/logout"/>




</LinearLayout>