<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="#ECDBFF"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:padding="10dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_weight="6"
            android:src="@drawable/logo_"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/bienvenido"
            android:gravity="center"
            android:textSize="35dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#000000"
            android:layout_weight="2"
            android:text="@string/bienvenido"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="2"
            android:textColor="#000000"
            android:text="@string/para_usar"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>


    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_weight="5.6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="8">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/idCorreoLogin"
                android:elevation="2dp"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:background="#FFFFFF"
                android:hint="@string/email"
                android:textSize="16sp"
                android:textColorHint="#000000"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/idContraseñaLogin"
                android:elevation="2dp"
                android:padding="12dp"
                android:inputType="textPassword"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textColorHint="#000000"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/minimum"/>


        <Button
            android:id="@+id/idLoginLogin"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:backgroundTint="#9A5ADB"
            android:layout_weight="1.2"
            android:text="@string/title_active_login"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="#000000"
            android:text="You do not have an account? register now" />

        <Button

            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_weight="1.2"
            android:id="@+id/idRegistroLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#85A1C2"
            android:layout_gravity="center"
            android:text="@string/register_"
            android:textSize="16sp" />

        <Spinner
            android:outlineAmbientShadowColor="#000000"
            android:layout_gravity="center"
            android:id="@+id/spinner"
            android:layout_marginTop="10dp"
            android:layout_width="212dp"
            android:layout_height="41dp"
            />

    </LinearLayout>


</LinearLayout>
