<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/linear_ll"
        android:orientation="horizontal"
        android:background="#E2FBF4">

        <ImageView
            android:id="@+id/goBackBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/go_back_icon"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Button
            android:id="@+id/btnCambiarIdioma"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-10dp"
            android:backgroundTint="#ECDBFF"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/change_language"
            android:textColor="#9A5ADB"
            android:textSize="18dp"
            android:textStyle="bold"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-10dp"
            android:backgroundTint="#ECDBFF"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/log_out"
            android:textColor="#9A5ADB"
            android:textSize="18dp"
            android:textStyle="bold"></Button>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#A6A6A6" />

</LinearLayout>