<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/linear_ll"
        android:orientation="horizontal"
        android:background="#E2FBF4">

        <ImageView
            android:id="@+id/goBackBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/go_back_icon"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="#9A5ADB"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#71BEC2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/personn_icon" />

        <TextView
            android:id="@+id/fullNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            android:hint="Default"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/icon_gender" />

        <TextView
            android:id="@+id/genderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Gender"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:hint="Default"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/tel_icon" />

        <TextView
            android:id="@+id/telephoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/telephone"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:inputType="phone"
            android:textColorHint="@color/black"
            android:hint="Default"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-10dp"
            android:backgroundTint="#ECDBFF"
            android:drawableLeft="@drawable/ic_baseline_save_24"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/save"
            android:textColor="#9A5ADB"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>